FireAlarmApplication.Web/mtg_debug_20260127_164554.txt

=== MTG FIRE DEBUG ===
Time: 2026-01-27 16:45:54
NetCDF: C:\Users\kubil\AppData\Local\Temp\08a20e0a-53d2-47fd-bd8a-cfc43cf4a402.nc

=== PYTHON STDERR (Debug Output) ===
  File "C:\Users\kubil\source\repos\FireAlarmApplication\FireAlarmApplication.Web\Scripts\parse_mtg_fire.py", line 32
    max_lat = float(parts[2])x""
                             ^
SyntaxError: invalid syntax


=== PYTHON STDOUT (JSON Output) ===


=== EXIT CODE ===
1
